--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
         }
 
         /* --- CAROUSEL STYLES --- */
-        .swiper {
+        .swiper-slide img, 
+        .swiper-slide video {
             width: 100%;
-            height: 450px;
-            border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+            height: 100%;
+            object-fit: contain; /* Keeps the whole video visible */
         }
         .swiper-slide {
             background: #fff;
@@ -339,6 +339,12 @@
                     <div class="swiper-slide"><img src="Pictures/Interphase.png" alt="Slide 2"></div>
                     <div class="swiper-slide"><img src="Pictures/bonding.png" alt="Slide 3"></div>
                     <div class="swiper-slide"><img src="Pictures/T&P.png" alt="Slide 4"></div>
+					<div class="swiper-slide">
+                        <video autoplay muted loop playsinline>
+                            <source src="Pictures/vid.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
